# privacy_evaluation_metrics

./: README.md  pyproject.toml  requirements.txt
data/: synth_adult.csv  synth_adult_x2.csv
examples/: outlier_removal.ipynb  privacy_example.ipynb  utility_example.ipynb
privacy_metrics/: indexes_neighbors_search.py  metrics.py  preprocessor.py  utils.py
synthetizers/: outlier_computation.py  synthetizers.py
utility_metrics/: metrics.py  utils.py
